src/assets/css/hero/uni_affiliation.css
.section-title{
    position: relative;    
}

.section-title::after {
    content: '';
    width: 30px;
    height: 2px;
    background: #007bff;
    position: absolute;
    left: 50%;
    margin-left: -15px;
    bottom: -20px;
}

.logo {
    max-width: 70%;
    height: auto;
}

